examples/c/error-codes/violates-constraint/fatal/CV-CDT3-bad-static.c
struct s { struct s x; };

int main() { }
